Add average branch lengths and better method for constructing plots

--- a/shelterin-data-explore-curated.ipynb
+++ b/shelterin-data-explore-curated.ipynb
@@ -25,7 +25,19 @@
     "all_stats_file = base_dir / \"output-libby-curated\" / \"all_statistics.csv\"\n",
     "assert all_stats_file.exists()\n",
     "all_stats = pd.read_csv(all_stats_file)\n",
-    "print(all_stats.columns)"
+    "\n",
+    "all_disordered_segments_file = base_dir / \"output-libby-curated\" / \"all_disordered_segment_statistics.csv\"\n",
+    "assert all_disordered_segments_file.exists()\n",
+    "all_disordered_segments = pd.read_csv(all_disordered_segments_file)\n",
+    "\n",
+    "# vet by date\n",
+    "date_exclude = \"2025\"\n",
+    "all_stats = all_stats[~all_stats[\"image\"].str.contains(date_exclude)]\n",
+    "all_disordered_segments = all_disordered_segments[~all_disordered_segments[\"image\"].str.contains(date_exclude)]\n",
+    "\n",
+    "print(all_stats.columns)\n",
+    "print(\"----\")\n",
+    "print(all_disordered_segments.columns)"
    ]
   },
   {
@@ -184,13 +196,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_tel12c = all_stats[all_stats[\"basename\"].str.contains(\"TEL12control\")]\n",
+    "all_stats_tbl_in_nm = all_stats.copy()\n",
+    "all_stats_tbl_in_nm[\"total_branch_lengths\"] /= 1e-9\n",
+    "all_stats_data_filtered = all_stats_tbl_in_nm[all_stats_tbl_in_nm[\"image\"].str.contains(\"\")]\n",
+    "print(f\"2025: {len(all_stats_data_filtered)}\")\n",
+    "data_tel12c = all_stats_data_filtered[all_stats_data_filtered[\"basename\"].str.contains(\"TEL12control\")]\n",
     "print(f\"tel12c: {len(data_tel12c)}\")\n",
-    "data_tel12s = all_stats[all_stats[\"basename\"].str.contains(\"TEL12shelterin\")]\n",
+    "data_tel12s = all_stats_data_filtered[all_stats_data_filtered[\"basename\"].str.contains(\"TEL12shelterin\")]\n",
     "print(f\"tel12s: {len(data_tel12s)}\")\n",
-    "data_tel12trf1 = all_stats[all_stats[\"basename\"].str.contains(\"TEL12TRF1\")]\n",
+    "data_tel12trf1 = all_stats_data_filtered[all_stats_data_filtered[\"basename\"].str.contains(\"TEL12TRF1\")]\n",
     "print(f\"tel12trf1: {len(data_tel12trf1)}\")\n",
-    "data_tel12trf2 = all_stats[all_stats[\"basename\"].str.contains(\"TEL12TRF2\")]\n",
+    "data_tel12trf2 = all_stats_data_filtered[all_stats_data_filtered[\"basename\"].str.contains(\"TEL12TRF2\")]\n",
     "print(f\"tel12trf2: {len(data_tel12trf2)}\")\n",
     "\n",
     "data_tel12c_s0_c1 = data_tel12c[(data_tel12c[\"subgrain_number\"] == 0) & (data_tel12c[\"class_number\"] == 1)]\n",
@@ -202,13 +218,111 @@
     "data_tel12trf2_s0_c1 = data_tel12trf2[(data_tel12trf2[\"subgrain_number\"] == 0) & (data_tel12trf2[\"class_number\"] == 1)]\n",
     "print(f\"tel12trf2_s0_c1: {len(data_tel12trf2_s0_c1)}\")\n",
     "\n",
+    "\n",
     "data_tbl_tel12 = pd.concat([data_tel12c_s0_c1, data_tel12s_s0_c1, data_tel12trf1_s0_c1, data_tel12trf2_s0_c1])\n",
     "plt.figure()\n",
-    "sns.stripplot(x=\"basename\", y=\"total_branch_lengths\", data=data_tbl_tel12)\n",
+    "# sns.stripplot(x=\"basename\", y=\"total_branch_lengths\", data=data_tbl_tel12)\n",
+    "sns.stripplot(x=\"basename\", y=\"total_contour_length\", data=data_tbl_tel12)\n",
     "# make labels vertical\n",
     "plt.xticks(rotation=90)\n",
     "plt.title(\"Total branch lengths of TEL12 proteins\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "# plot just for one datapoint\n",
+    "single_explore_datapoint = all_stats[all_stats[\"image\"].str.contains(\"20250204_PICOZTEL12_RELAXED_trf1_.0_00018\")]\n",
+    "print(single_explore_datapoint)\n",
+    "plt.figure()\n",
+    "sns.stripplot(x=\"basename\", y=\"total_branch_lengths\", data=single_explore_datapoint)\n",
+    "plt.title(\"Total branch lengths of TEL12 proteins\")\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "# grab tel12trf1 with tbl less than 1000\n",
+    "data_tel12trf1_s0_c1_tbl_anomalies = data_tel12trf1_s0_c1[data_tel12trf1_s0_c1[\"total_branch_lengths\"] > 1500]\n",
+    "print(f\"tel12 anomalies: {len(data_tel12trf1_s0_c1_tbl_anomalies)}\")\n",
+    "print(data_tel12trf1_s0_c1_tbl_anomalies[\"image\"].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# median branch length for TEL12TRF1 vs TEL12TRF2 vs TEL12shelterin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_tel12s = all_stats[all_stats[\"basename\"].str.contains(\"TEL12shelterin\")]\n",
+    "print(f\"tel12s: {len(data_tel12s)}\")\n",
+    "data_tel12trf1 = all_stats[all_stats[\"basename\"].str.contains(\"TEL12TRF1\")]\n",
+    "print(f\"tel12trf1: {len(data_tel12trf1)}\")\n",
+    "data_tel12trf2 = all_stats[all_stats[\"basename\"].str.contains(\"TEL12TRF2\")]\n",
+    "print(f\"tel12trf2: {len(data_tel12trf2)}\")\n",
+    "\n",
+    "mean_branch_length_df_list = []\n",
+    "\n",
+    "for data, name in zip([data_tel12s, data_tel12trf1, data_tel12trf2], [\"TEL12shelterin\", \"TEL12TRF1\", \"TEL12TRF2\"]):\n",
+    "    images = data[\"image\"].unique()\n",
+    "    for image in images:\n",
+    "        subdata_images = data[data[\"image\"] == image]\n",
+    "        grain_numbers = subdata_images[\"grain_number\"].unique()\n",
+    "\n",
+    "        for grain_number in grain_numbers:\n",
+    "\n",
+    "            # for this grain if there is not both class 1 and class 2, skip\n",
+    "            classes = subdata_images[subdata_images[\"grain_number\"] == grain_number][\"class_number\"].unique()\n",
+    "            if 1 not in classes or 2 not in classes:\n",
+    "                continue\n",
+    "            subdata_grain = subdata_images[subdata_images[\"grain_number\"] == grain_number]\n",
+    "\n",
+    "            disordered_segment_data = all_disordered_segments[all_disordered_segments[\"image\"] == image]\n",
+    "            disordered_segment_data = disordered_segment_data[disordered_segment_data[\"grain_number\"] == grain_number]\n",
+    "            branch_distances = disordered_segment_data[\"branch_distance\"]\n",
+    "            mean_branch_distance = np.mean(branch_distances)\n",
+    "            tbl = subdata_grain[\"total_branch_lengths\"].values[0]\n",
+    "            mean_branch_distance_divided_by_total_branch_length = mean_branch_distance / tbl\n",
+    "            basename = subdata_grain[\"basename\"].values[0]\n",
+    "            # add to df list\n",
+    "            mean_branch_length_df_list.append(\n",
+    "                {\n",
+    "                    \"image\": image,\n",
+    "                    \"grain_number\": grain_number,\n",
+    "                    \"mean_branch_distance\": mean_branch_distance,\n",
+    "                    \"basename\": basename,\n",
+    "                    \"mean_branch_distance_divided_by_total_branch_length\": mean_branch_distance_divided_by_total_branch_length,\n",
+    "                    \"total_branch_length\": tbl\n",
+    "                }\n",
+    "            )\n",
+    "\n",
+    "mean_branch_length_df = pd.DataFrame(mean_branch_length_df_list)\n",
+    "\n",
+    "plt.figure()\n",
+    "# sns.boxplot(x=\"basename\", y=\"mean_branch_distance\", data=mean_branch_length_df)\n",
+    "# sns.violinplot(x=\"basename\", y=\"mean_branch_distance\", data=mean_branch_length_df)\n",
+    "sns.stripplot(x=\"basename\", y=\"mean_branch_distance\", data=mean_branch_length_df)\n",
+    "plt.title(\"Mean branch distance of disordered segments\")\n",
+    "plt.xticks(rotation=90)\n",
+    "# plt.ylim(0, 200)\n",
+    "plt.show()\n",
+    "\n",
+    "# total branch length\n",
+    "plt.figure()\n",
+    "# sns.violinplot(x=\"basename\", y=\"total_branch_length\", data=mean_branch_length_df)\n",
+    "sns.stripplot(x=\"basename\", y=\"total_branch_length\", data=mean_branch_length_df)\n",
+    "plt.title(\"Total branch length\")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "data_tel12trf1_mean_branch_distance_anomalies = mean_branch_length_df[mean_branch_length_df[\"mean_branch_distance\"] > 400]\n",
+    "data_tel12trf1_mean_branch_distance_anomalies = data_tel12trf1_mean_branch_distance_anomalies[\n",
+    "    data_tel12trf1_mean_branch_distance_anomalies[\"basename\"].str.contains(\"TEL12TRF1\")]\n",
+    "print(f\"tel12trf1 anomalies: {len(data_tel12trf1_mean_branch_distance_anomalies)}\")\n",
+    "print(data_tel12trf1_mean_branch_distance_anomalies[\"image\"].unique())"
    ]
   }
  ],
