--- a/shelterin-data-explore-curated.ipynb
+++ b/shelterin-data-explore-curated.ipynb
@@ -265,20 +265,21 @@
     "\n",
     "mean_branch_length_df_list = []\n",
     "\n",
+    "only_class_1_and_2 = False\n",
+    "\n",
     "for data, name in zip([data_tel12s, data_tel12trf1, data_tel12trf2], [\"TEL12shelterin\", \"TEL12TRF1\", \"TEL12TRF2\"]):\n",
     "    images = data[\"image\"].unique()\n",
     "    for image in images:\n",
     "        subdata_images = data[data[\"image\"] == image]\n",
     "        grain_numbers = subdata_images[\"grain_number\"].unique()\n",
-    "\n",
     "        for grain_number in grain_numbers:\n",
-    "\n",
     "            # for this grain if there is not both class 1 and class 2, skip\n",
     "            classes = subdata_images[subdata_images[\"grain_number\"] == grain_number][\"class_number\"].unique()\n",
-    "            if 1 not in classes or 2 not in classes:\n",
-    "                continue\n",
-    "            subdata_grain = subdata_images[subdata_images[\"grain_number\"] == grain_number]\n",
+    "            if only_class_1_and_2:\n",
+    "                if 1 not in classes or 2 not in classes:\n",
+    "                    continue\n",
     "\n",
+    "            subdata_grain = subdata_images[subdata_images[\"grain_number\"] == grain_number]\n",
     "            disordered_segment_data = all_disordered_segments[all_disordered_segments[\"image\"] == image]\n",
     "            disordered_segment_data = disordered_segment_data[disordered_segment_data[\"grain_number\"] == grain_number]\n",
     "            branch_distances = disordered_segment_data[\"branch_distance\"]\n",
@@ -294,7 +295,10 @@
     "                    \"mean_branch_distance\": mean_branch_distance,\n",
     "                    \"basename\": basename,\n",
     "                    \"mean_branch_distance_divided_by_total_branch_length\": mean_branch_distance_divided_by_total_branch_length,\n",
-    "                    \"total_branch_length\": tbl\n",
+    "                    \"total_branch_length\": tbl,\n",
+    "                    \"total_protein_volume\": subdata_grain[subdata_grain[\"class_number\"] == 2][\"volume\"].sum(),\n",
+    "                    \"class1\": 1 in classes,\n",
+    "                    \"class2\": 2 in classes,\n",
     "                }\n",
     "            )\n",
     "\n",
@@ -317,10 +321,48 @@
     "plt.xticks(rotation=90)\n",
     "plt.show()\n",
     "\n",
+    "total_branch_bridge_threshold = 0.6e-6\n",
+    "mean_branch_length_df[\"bridged\"] = mean_branch_length_df[\"total_branch_length\"] > total_branch_bridge_threshold\n",
+    "bridged = mean_branch_length_df[mean_branch_length_df[\"bridged\"] == True]\n",
+    "not_bridged = mean_branch_length_df[mean_branch_length_df[\"bridged\"] == False]\n",
+    "plt.figure()\n",
+    "sns.stripplot(x=\"basename\", y=\"total_branch_length\", data=bridged)\n",
+    "sns.stripplot(x=\"basename\", y=\"total_branch_length\", data=not_bridged)\n",
+    "plt.title(\"Total branch length bridged vs not bridged\")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.show()\n",
     "\n",
-    "data_tel12trf1_mean_branch_distance_anomalies = mean_branch_length_df[mean_branch_length_df[\"mean_branch_distance\"] > 400]\n",
+    "# for each basename, print number of bridged vs not bridged\n",
+    "for basename in mean_branch_length_df[\"basename\"].unique():\n",
+    "    basename_data = mean_branch_length_df[mean_branch_length_df[\"basename\"] == basename]\n",
+    "    bridged = basename_data[basename_data[\"bridged\"] == True]\n",
+    "    not_bridged = basename_data[basename_data[\"bridged\"] == False]\n",
+    "    percentage_bridged = len(bridged) / (len(bridged) + len(not_bridged)) * 100\n",
+    "    # print with padding so it's all lined up\n",
+    "    print(\n",
+    "        f\"{basename:<40} bridged: {len(bridged):<8} not bridged: {len(not_bridged):<8} percentage: {percentage_bridged:.2f}%   ratio: {len(bridged) / len(not_bridged):.2f}\"\n",
+    "    )\n",
+    "\n",
+    "# volume vs mean branch distance - ONLY RUN WHEN THERE ARE CLASS 1 AND 2\n",
+    "plt.figure()\n",
+    "sns.scatterplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=mean_branch_length_df)\n",
+    "plt.title(\"Total protein volume vs total branch length\")\n",
+    "plt.show()\n",
+    "\n",
+    "# volume protein by itself\n",
+    "plt.figure()\n",
+    "sns.stripplot(x=\"basename\", y=\"total_protein_volume\", data=mean_branch_length_df)\n",
+    "plt.title(\"Total protein volume\")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "data_tel12trf1_mean_branch_distance_anomalies = mean_branch_length_df[\n",
+    "    mean_branch_length_df[\"mean_branch_distance\"] > 400\n",
+    "]\n",
     "data_tel12trf1_mean_branch_distance_anomalies = data_tel12trf1_mean_branch_distance_anomalies[\n",
-    "    data_tel12trf1_mean_branch_distance_anomalies[\"basename\"].str.contains(\"TEL12TRF1\")]\n",
+    "    data_tel12trf1_mean_branch_distance_anomalies[\"basename\"].str.contains(\"TEL12TRF1\")\n",
+    "]\n",
     "print(f\"tel12trf1 anomalies: {len(data_tel12trf1_mean_branch_distance_anomalies)}\")\n",
     "print(data_tel12trf1_mean_branch_distance_anomalies[\"image\"].unique())"
    ]
