custom box plots and tidy up

--- a/shelterin-data-explore-curated.ipynb
+++ b/shelterin-data-explore-curated.ipynb
@@ -44,9 +44,28 @@
     "all_stats[\"smallest_bounding_area\"] /= 1e-18\n",
     "all_stats[\"area\"] /= 1e-18\n",
     "\n",
+    "# plotting options\n",
+    "boxplotcolour = \"lightgrey\"\n",
+    "\n",
     "print(all_stats.columns)\n",
     "print(\"----\")\n",
     "print(all_disordered_segments.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def boxplot(x, y, data):\n",
+    "    sns.boxplot(x=x, y=y, data=data, color=boxplotcolour)\n",
+    "    # print the median and IQRs for each x's y values\n",
+    "    for i, group in data.groupby(x):\n",
+    "        # median\n",
+    "        median = group[y].median()\n",
+    "        iqr = group[y].quantile(0.75) - group[y].quantile(0.25)\n",
+    "        print(f\"{x}={i}: median={median}, IQR={iqr}\")"
    ]
   },
   {
@@ -188,6 +207,7 @@
     "# plot TBL for both\n",
     "plt.figure()\n",
     "sns.stripplot(x=\"display_name\", y=\"total_branch_lengths\", data=data_tel80c_tel80s)\n",
+    "sns.boxplot(x=\"display_name\", y=\"total_branch_lengths\", data=data_tel80c_tel80s, color=boxplotcolour)\n",
     "plt.title(\"Total branch lengths of TEL80control and TEL80shelterin\")\n",
     "plt.xlabel(\"sample type\")\n",
     "plt.ylabel(\"total branch length (nm)\")\n",
@@ -392,17 +412,10 @@
     "plt.figure()\n",
     "# sns.stripplot(x=\"basename\", y=\"total_branch_lengths\", data=data_tbl_tel12)\n",
     "sns.stripplot(x=\"display_name\", y=\"total_contour_length\", data=data_tbl_tel12)\n",
+    "sns.boxplot(x=\"display_name\", y=\"total_contour_length\", data=data_tbl_tel12, color=boxplotcolour)\n",
     "# make labels vertical\n",
     "plt.xticks(rotation=90)\n",
     "plt.title(\"Total branch lengths of TEL12 proteins class 1 only\")\n",
-    "plt.show()\n",
-    "\n",
-    "# plot just for one datapoint\n",
-    "single_explore_datapoint = all_stats[all_stats[\"image\"].str.contains(\"20250204_PICOZTEL12_RELAXED_trf1_.0_00018\")]\n",
-    "print(single_explore_datapoint)\n",
-    "plt.figure()\n",
-    "sns.stripplot(x=\"basename\", y=\"total_branch_lengths\", data=single_explore_datapoint)\n",
-    "plt.title(\"Total branch lengths of TEL12 proteins\")\n",
     "plt.show()\n",
     "\n",
     "\n",
@@ -419,6 +432,12 @@
     "]\n",
     "plt.figure()\n",
     "sns.stripplot(x=\"display_name\", y=\"total_branch_lengths\", data=data_tel12_s0_c1_without_mutants)\n",
+    "sns.boxplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_branch_lengths\",\n",
+    "    data=data_tel12_s0_c1_without_mutants,\n",
+    "    color=boxplotcolour,\n",
+    ")\n",
     "plt.title(\"Total branch lengths of TEL12 proteins\")\n",
     "plt.xticks(rotation=90)\n",
     "plt.xlabel(\"sample type\")\n",
@@ -494,11 +513,14 @@
     "################ Mean branch length for only TRF1 and TRF2\n",
     "\n",
     "plt.figure()\n",
-    "# sns.boxplot(x=\"basename\", y=\"mean_branch_distance\", data=mean_branch_length_df)\n",
-    "# sns.violinplot(x=\"basename\", y=\"mean_branch_distance\", data=mean_branch_length_df)\n",
-    "# only trf1 and trf2\n",
     "mean_branch_length_trf1_trf2 = bigdf[bigdf[\"display_name\"].isin([\"TEL12TRF1\", \"TEL12TRF2\"])]\n",
     "sns.stripplot(x=\"display_name\", y=\"mean_branch_distance\", data=mean_branch_length_trf1_trf2)\n",
+    "sns.boxplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"mean_branch_distance\",\n",
+    "    data=mean_branch_length_trf1_trf2,\n",
+    "    color=boxplotcolour,\n",
+    ")\n",
     "plt.title(\"Mean branch distance of disordered segments\")\n",
     "plt.xticks(rotation=90)\n",
     "plt.ylabel(\"Mean branch distance of disordered segments (nm)\")\n",
@@ -513,6 +535,7 @@
     "print(df_mean_bl_plot[\"display_name\"].unique())\n",
     "plt.figure()\n",
     "sns.stripplot(x=\"display_name\", y=\"mean_branch_distance\", data=df_mean_bl_plot)\n",
+    "sns.boxplot(x=\"display_name\", y=\"mean_branch_distance\", data=df_mean_bl_plot, color=boxplotcolour)\n",
     "plt.title(\"Mean branch distance of disordered segments C1&C2 only\")\n",
     "plt.xticks(rotation=90)\n",
     "plt.ylabel(\"Mean branch distance of disordered segments (nm)\")\n",
@@ -533,6 +556,7 @@
     "    x=\"display_name\",\n",
     "    y=\"total_branch_length\",\n",
     "    data=bigdf[bigdf[\"display_name\"] != \"TEL12shelterin\"],\n",
+    "    color=boxplotcolour,\n",
     ")\n",
     "plt.title(f\"Total branch length\")\n",
     "plt.xticks(rotation=90)\n",
@@ -551,6 +575,9 @@
     "]\n",
     "plt.figure()\n",
     "sns.stripplot(x=\"display_name\", y=\"total_branch_length\", data=mean_branch_length_control_trf1_trf2_shelterin)\n",
+    "sns.boxplot(\n",
+    "    x=\"display_name\", y=\"total_branch_length\", data=mean_branch_length_control_trf1_trf2_shelterin, color=boxplotcolour\n",
+    ")\n",
     "plt.title(f\"Total branch length\")\n",
     "plt.xlabel(\"sample type\")\n",
     "plt.ylabel(\"Total branch length (nm)\")\n",
@@ -570,10 +597,14 @@
     "bridged = bigdf[bigdf[\"bridged\"] == True]\n",
     "not_bridged = bigdf[bigdf[\"bridged\"] == False]\n",
     "plt.figure()\n",
-    "sns.stripplot(x=\"basename\", y=\"total_branch_length\", data=bridged)\n",
-    "sns.stripplot(x=\"basename\", y=\"total_branch_length\", data=not_bridged)\n",
+    "sns.stripplot(x=\"display_name\", y=\"total_branch_length\", data=bridged)\n",
+    "sns.boxplot(x=\"display_name\", y=\"total_branch_length\", data=bridged, color=boxplotcolour)\n",
+    "sns.stripplot(x=\"display_name\", y=\"total_branch_length\", data=not_bridged)\n",
+    "sns.boxplot(x=\"display_name\", y=\"total_branch_length\", data=not_bridged, color=boxplotcolour)\n",
     "plt.title(\"Total branch length bridged vs not bridged\")\n",
     "plt.xticks(rotation=90)\n",
+    "plt.xlabel(\"sample type\", fontsize=14)\n",
+    "plt.ylabel(\"total branch length (nm)\", fontsize=14)\n",
     "plt.show()\n",
     "\n",
     "\n",
@@ -621,12 +652,15 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "\n",
     "############### total protein volume\n",
     "\n",
     "plt.figure()\n",
     "sns.stripplot(x=\"display_name\", y=\"total_protein_volume\", data=bigdf_only_c1c2)\n",
+    "# sns.boxplot(x=\"display_name\", y=\"total_protein_volume\", data=bigdf_only_c1c2, color=boxplotcolour)\n",
+    "boxplot(x=\"display_name\", y=\"total_protein_volume\", data=bigdf_only_c1c2)\n",
     "plt.title(\"Total protein volume\")\n",
+    "plt.xlabel(\"sample type\", fontsize=14)\n",
+    "plt.ylabel(\"Total protein volume (nm^3)\", fontsize=14)\n",
     "plt.xticks(rotation=90)\n",
     "plt.show()"
    ]
