formatting improvements and refactoring

--- a/shelterin-data-explore-curated.ipynb
+++ b/shelterin-data-explore-curated.ipynb
@@ -65,7 +65,27 @@
     "        # median\n",
     "        median = group[y].median()\n",
     "        iqr = group[y].quantile(0.75) - group[y].quantile(0.25)\n",
-    "        print(f\"{x}={i}: median={median}, IQR={iqr}\")"
+    "        print(f\"{i}: median={median}, IQR={iqr}\")\n",
+    "\n",
+    "\n",
+    "def simpleticks():\n",
+    "    num_ticks = len(plt.gca().get_xticklabels())\n",
+    "    new_ticks = []\n",
+    "    for i, tick in enumerate(plt.gca().get_xticklabels()):\n",
+    "        # get rid of \"TEL12\" or \"TEL80\" from the tick label\n",
+    "        # get rid of TEL12 if applicable\n",
+    "        if \"TEL12\" in tick.get_text():\n",
+    "            tick.set_text(tick.get_text().replace(\"TEL12\", \"\"))\n",
+    "        # get rid of TEL80 if applicable\n",
+    "        if \"TEL80\" in tick.get_text():\n",
+    "            tick.set_text(tick.get_text().replace(\"TEL80\", \"\"))\n",
+    "        new_ticks.append(tick.get_text())\n",
+    "    # set the ticks\n",
+    "    tick_indexes = np.linspace(0, num_ticks - 1, num_ticks)\n",
+    "    plt.xticks(tick_indexes, new_ticks)\n",
+    "\n",
+    "# set default font size for axes labels\n",
+    "plt.rcParams.update({'axes.labelsize': 16})"
    ]
   },
   {
@@ -207,10 +227,11 @@
     "# plot TBL for both\n",
     "plt.figure()\n",
     "sns.stripplot(x=\"display_name\", y=\"total_branch_lengths\", data=data_tel80c_tel80s)\n",
-    "sns.boxplot(x=\"display_name\", y=\"total_branch_lengths\", data=data_tel80c_tel80s, color=boxplotcolour)\n",
-    "plt.title(\"Total branch lengths of TEL80control and TEL80shelterin\")\n",
-    "plt.xlabel(\"sample type\")\n",
+    "boxplot(\"display_name\", \"total_branch_lengths\", data_tel80c_tel80s)\n",
     "plt.ylabel(\"total branch length (nm)\")\n",
+    "plt.xlabel(\"\")\n",
+    "# redraw x ticks to be more readable\n",
+    "simpleticks()\n",
     "plt.show()"
    ]
   },
@@ -243,17 +264,17 @@
     "\n",
     "plt.figure()\n",
     "plt.scatter(tbls, total_volumes)\n",
-    "plt.title(\"Total branch lengths vs total volume for TEL80 + shelterin\")\n",
-    "plt.xlabel(\"Total branch lengths\")\n",
-    "plt.ylabel(\"Protein volume (nm^3)\")\n",
+    "# plt.title(\"Total branch lengths vs total volume for TEL80 + shelterin\")\n",
+    "plt.xlabel(\"Total branch length ($nm$)\")\n",
+    "plt.ylabel(\"Protein volume ($nm^3$)\")\n",
     "plt.show()\n",
     "\n",
-    "plt.figure()\n",
-    "plt.scatter(tbls, maximum_volumes)\n",
-    "plt.title(\"Total branch lengths vs maximum volume\")\n",
-    "plt.xlabel(\"Total branch lengths\")\n",
-    "plt.ylabel(\"Maximum volume\")\n",
-    "plt.show()"
+    "# plt.figure()\n",
+    "# plt.scatter(tbls, maximum_volumes)\n",
+    "# # plt.title(\"Total branch lengths vs maximum volume\")\n",
+    "# plt.xlabel(\"Total branch length ($nm$)\")\n",
+    "# plt.ylabel(\"Maximum volume ($nm^3$)\")\n",
+    "# plt.show()"
    ]
   },
   {
@@ -512,6 +533,7 @@
     "\n",
     "################ Mean branch length for only TRF1 and TRF2\n",
     "\n",
+    "print(\"Mean branch length for only TRF1 and TRF2\")\n",
     "plt.figure()\n",
     "mean_branch_length_trf1_trf2 = bigdf[bigdf[\"display_name\"].isin([\"TEL12TRF1\", \"TEL12TRF2\"])]\n",
     "sns.stripplot(x=\"display_name\", y=\"mean_branch_distance\", data=mean_branch_length_trf1_trf2)\n",
@@ -521,14 +543,13 @@
     "    data=mean_branch_length_trf1_trf2,\n",
     "    color=boxplotcolour,\n",
     ")\n",
-    "plt.title(\"Mean branch distance of disordered segments\")\n",
-    "plt.xticks(rotation=90)\n",
-    "plt.ylabel(\"Mean branch distance of disordered segments (nm)\")\n",
-    "plt.xlabel(\"sample type\")\n",
-    "# plt.ylim(0, 200)\n",
+    "plt.ylabel(\"Mean branch distance ($nm$)\")\n",
+    "plt.xlabel(\"\")\n",
+    "simpleticks()\n",
     "plt.show()\n",
     "\n",
     "# same but for only c1c2\n",
+    "print(\"Mean branch length C1C2 for only TRF1 and TRF2\")\n",
     "df_mean_bl_plot = bigdf_only_c1c2[bigdf_only_c1c2[\"display_name\"].isin([\"TEL12TRF1\", \"TEL12TRF2\", \"TEL12shelterin\"])]\n",
     "# add all control data to this df\n",
     "df_mean_bl_plot = pd.concat([df_mean_bl_plot, bigdf_tel12c])\n",
@@ -536,13 +557,23 @@
     "plt.figure()\n",
     "sns.stripplot(x=\"display_name\", y=\"mean_branch_distance\", data=df_mean_bl_plot)\n",
     "sns.boxplot(x=\"display_name\", y=\"mean_branch_distance\", data=df_mean_bl_plot, color=boxplotcolour)\n",
-    "plt.title(\"Mean branch distance of disordered segments C1&C2 only\")\n",
-    "plt.xticks(rotation=90)\n",
-    "plt.ylabel(\"Mean branch distance of disordered segments (nm)\")\n",
-    "plt.xlabel(\"sample type\")\n",
+    "plt.ylabel(\"Mean branch distance ($nm$)\")\n",
+    "simpleticks()\n",
+    "plt.xlabel(\"\")\n",
     "plt.show()\n",
     "\n",
     "############## total branch length for all except shelterin\n",
+    "\n",
+    "print(\"Total branch length for all mutants except shelterin, control\")\n",
+    "plot_tbl_all_but_s_c_order = [\n",
+    "    \"TEL12TRF1\",\n",
+    "    \"TEL12TRF2\",\n",
+    "    \"TEL12TRF2cb\",\n",
+    "    \"TEL12TRF2cTRFH\",\n",
+    "    \"TEL12TRF2ch\",\n",
+    "    \"TEL12TRF2cmyb\",\n",
+    "]\n",
+    "mean_branch_length_df = bigdf[bigdf[\"display_name\"].isin(plot_tbl_all_but_s_c_order)]\n",
     "\n",
     "# total branch length\n",
     "plt.figure()\n",
@@ -550,26 +581,38 @@
     "sns.stripplot(\n",
     "    x=\"display_name\",\n",
     "    y=\"total_branch_length\",\n",
-    "    data=bigdf[bigdf[\"display_name\"] != \"TEL12shelterin\"],\n",
+    "    data=mean_branch_length_df,\n",
+    "    order=plot_tbl_all_but_s_c_order\n",
     ")\n",
-    "sns.boxplot(\n",
-    "    x=\"display_name\",\n",
-    "    y=\"total_branch_length\",\n",
-    "    data=bigdf[bigdf[\"display_name\"] != \"TEL12shelterin\"],\n",
-    "    color=boxplotcolour,\n",
-    ")\n",
-    "plt.title(f\"Total branch length\")\n",
-    "plt.xticks(rotation=90)\n",
-    "plt.xlabel(\"sample type\")\n",
-    "plt.ylabel(\"Total branch length (nm)\")\n",
+    "boxplot(\"display_name\", \"total_branch_length\", mean_branch_length_df)\n",
+    "plt.xlabel(\"\")\n",
+    "plt.ylabel(\"Total branch length ($nm$)\")\n",
+    "simpleticks()\n",
+    "plt.xticks(rotation=45)\n",
     "plt.show()\n",
     "\n",
-    "# print ns for each display name\n",
-    "for display_name in bigdf[\"display_name\"].unique():\n",
-    "    print(f\"{display_name}: {len(bigdf[bigdf['display_name'] == display_name])}\")\n",
+    "######################## total branch length C1&2 for TRF1, TRF2, shelterin\n",
+    "\n",
+    "print(\"total branch length C1&2 for TRF1, TRF2, shelterin\")\n",
+    "mean_branch_length_trf1_trf2_shelterin = bigdf_only_c1c2[\n",
+    "    bigdf_only_c1c2[\"display_name\"].isin([\"TEL12TRF1\", \"TEL12TRF2\", \"TEL12shelterin\"])\n",
+    "]\n",
+    "\n",
+    "plt.figure()\n",
+    "sns.stripplot(x=\"display_name\", y=\"total_branch_length\", data=mean_branch_length_trf1_trf2_shelterin)\n",
+    "sns.boxplot(\n",
+    "    x=\"display_name\", y=\"total_branch_length\", data=mean_branch_length_trf1_trf2_shelterin, color=boxplotcolour\n",
+    ")\n",
+    "# plt.title(f\"Total branch length C1&2\")\n",
+    "plt.ylabel(\"Total branch length ($nm$)\")\n",
+    "plt.xlabel(\"\")\n",
+    "simpleticks()\n",
+    "plt.show()\n",
+    "\n",
     "\n",
     "######################## SAME BUT FOR ONLY MAIN SAMPLES ONLY\n",
     "\n",
+    "print(\"total branch length for main samples only\")\n",
     "mean_branch_length_control_trf1_trf2_shelterin = bigdf[\n",
     "    bigdf[\"display_name\"].isin([\"TEL12control\", \"TEL12TRF1\", \"TEL12TRF2\", \"TEL12shelterin\"])\n",
     "]\n",
@@ -579,9 +622,7 @@
     "    x=\"display_name\", y=\"total_branch_length\", data=mean_branch_length_control_trf1_trf2_shelterin, color=boxplotcolour\n",
     ")\n",
     "plt.title(f\"Total branch length\")\n",
-    "plt.xlabel(\"sample type\")\n",
-    "plt.ylabel(\"Total branch length (nm)\")\n",
-    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"Total branch length ($nm$)\")\n",
     "plt.show()\n",
     "\n",
     "# print ns for each display name\n",
@@ -592,6 +633,7 @@
     "\n",
     "########################## bridged vs non bridged\n",
     "\n",
+    "print(\"bridged vs non bridged\")\n",
     "total_branch_bridge_threshold = 600\n",
     "bigdf[\"bridged\"] = bigdf[\"total_branch_length\"] > total_branch_bridge_threshold\n",
     "bridged = bigdf[bigdf[\"bridged\"] == True]\n",
@@ -603,8 +645,8 @@
     "sns.boxplot(x=\"display_name\", y=\"total_branch_length\", data=not_bridged, color=boxplotcolour)\n",
     "plt.title(\"Total branch length bridged vs not bridged\")\n",
     "plt.xticks(rotation=90)\n",
-    "plt.xlabel(\"sample type\", fontsize=14)\n",
-    "plt.ylabel(\"total branch length (nm)\", fontsize=14)\n",
+    "plt.ylabel(\"total branch length ($nm$)\", fontsize=14)\n",
+    "plt.xlabel(\"\")\n",
     "plt.show()\n",
     "\n",
     "\n",
@@ -622,34 +664,44 @@
     "\n",
     "########################## volume vs total branch length\n",
     "\n",
+    "print(\"tbl vs volume scatter for all\")\n",
+    "\n",
     "plt.figure()\n",
     "sns.scatterplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=bigdf_only_c1c2)\n",
-    "plt.title(\"Total protein volume vs total branch length\")\n",
     "plt.show()\n",
     "\n",
-    "############# scatter for only TRF1, TRF2, shelterin\n",
+    "############# TBL vs protein volume scatter for only TRF1, TRF2, shelterin\n",
     "\n",
     "trf1_only = bigdf_only_c1c2[bigdf_only_c1c2[\"display_name\"] == \"TEL12TRF1\"]\n",
     "trf2_only = bigdf_only_c1c2[bigdf_only_c1c2[\"display_name\"] == \"TEL12TRF2\"]\n",
     "shelterin_only = bigdf_only_c1c2[bigdf_only_c1c2[\"display_name\"] == \"TEL12shelterin\"]\n",
     "\n",
+    "print(\"tbl vs protein volume scatter for TRF1, TRF2, shelterin\")\n",
     "plt.figure()\n",
     "sns.scatterplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=trf1_only, label=f\"TRF1 n={len(trf1_only)}\")\n",
     "sns.scatterplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=trf2_only, label=f\"TRF2 n={len(trf2_only)}\")\n",
     "sns.scatterplot(\n",
     "    x=\"total_protein_volume\", y=\"total_branch_length\", data=shelterin_only, label=f\"shelterin n={len(shelterin_only)}\"\n",
     ")\n",
+    "plt.xlabel(\"Total protein volume ($nm^3$)\")\n",
+    "plt.ylabel(\"Total branch length ($nm$)\")\n",
+    "plt.legend(loc=\"lower right\")\n",
+    "plt.show()\n",
     "\n",
+    "print(\"tbl vs protein volume scatter for TRF1, TRF2, shelterin with regression\")\n",
+    "plt.figure()\n",
+    "sns.scatterplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=trf1_only, label=f\"TRF1 n={len(trf1_only)}\")\n",
+    "sns.scatterplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=trf2_only, label=f\"TRF2 n={len(trf2_only)}\")\n",
+    "sns.scatterplot(\n",
+    "    x=\"total_protein_volume\", y=\"total_branch_length\", data=shelterin_only, label=f\"shelterin n={len(shelterin_only)}\"\n",
+    ")\n",
     "# regression plus confidence intervals for each scatter plot\n",
     "sns.regplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=trf1_only, scatter=False)\n",
     "sns.regplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=trf2_only, scatter=False)\n",
     "sns.regplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=shelterin_only, scatter=False)\n",
-    "\n",
-    "\n",
-    "plt.title(\"Total protein volume vs total branch length for TRF1 and TRF2\")\n",
-    "plt.xlabel(\"Total protein volume (nm^3)\")\n",
-    "plt.ylabel(\"Total branch length (nm)\")\n",
-    "plt.legend()\n",
+    "plt.xlabel(\"Total protein volume ($nm^3$)\")\n",
+    "plt.ylabel(\"Total branch length ($nm$)\")\n",
+    "plt.legend(loc=\"lower right\")\n",
     "plt.show()\n",
     "\n",
     "############### total protein volume\n",
@@ -660,7 +712,7 @@
     "boxplot(x=\"display_name\", y=\"total_protein_volume\", data=bigdf_only_c1c2)\n",
     "plt.title(\"Total protein volume\")\n",
     "plt.xlabel(\"sample type\", fontsize=14)\n",
-    "plt.ylabel(\"Total protein volume (nm^3)\", fontsize=14)\n",
+    "plt.ylabel(\"Total protein volume ($nm^3$)\", fontsize=14)\n",
     "plt.xticks(rotation=90)\n",
     "plt.show()"
    ]
