rename control to plasmid name in xticks

--- a/shelterin-data-explore-curated.ipynb
+++ b/shelterin-data-explore-curated.ipynb
@@ -75,17 +75,24 @@
     "        # get rid of \"TEL12\" or \"TEL80\" from the tick label\n",
     "        # get rid of TEL12 if applicable\n",
     "        if \"TEL12\" in tick.get_text():\n",
-    "            tick.set_text(tick.get_text().replace(\"TEL12\", \"\"))\n",
+    "            if \"control\" in tick.get_text():\n",
+    "                tick.set_text(\"TEL12\")\n",
+    "            else:\n",
+    "                tick.set_text(tick.get_text().replace(\"TEL12\", \"\"))\n",
     "        # get rid of TEL80 if applicable\n",
     "        if \"TEL80\" in tick.get_text():\n",
-    "            tick.set_text(tick.get_text().replace(\"TEL80\", \"\"))\n",
+    "            if \"control\" in tick.get_text():\n",
+    "                tick.set_text(\"TEL80\")\n",
+    "            else:\n",
+    "                tick.set_text(tick.get_text().replace(\"TEL80\", \"\"))\n",
     "        new_ticks.append(tick.get_text())\n",
     "    # set the ticks\n",
     "    tick_indexes = np.linspace(0, num_ticks - 1, num_ticks)\n",
     "    plt.xticks(tick_indexes, new_ticks)\n",
     "\n",
+    "\n",
     "# set default font size for axes labels\n",
-    "plt.rcParams.update({'axes.labelsize': 16})"
+    "plt.rcParams.update({\"axes.labelsize\": 16})"
    ]
   },
   {
@@ -578,12 +585,7 @@
     "# total branch length\n",
     "plt.figure()\n",
     "# sns.violinplot(x=\"basename\", y=\"total_branch_length\", data=mean_branch_length_df)\n",
-    "sns.stripplot(\n",
-    "    x=\"display_name\",\n",
-    "    y=\"total_branch_length\",\n",
-    "    data=mean_branch_length_df,\n",
-    "    order=plot_tbl_all_but_s_c_order\n",
-    ")\n",
+    "sns.stripplot(x=\"display_name\", y=\"total_branch_length\", data=mean_branch_length_df, order=plot_tbl_all_but_s_c_order)\n",
     "boxplot(\"display_name\", \"total_branch_length\", mean_branch_length_df)\n",
     "plt.xlabel(\"\")\n",
     "plt.ylabel(\"Total branch length ($nm$)\")\n",
