run grains through grainstats but with a bug where small ones crash grainstats.py becaues feret hull calculations

--- a/perovskite-grain-analysis.ipynb
+++ b/perovskite-grain-analysis.ipynb
@@ -12,9 +12,13 @@
     "import numpy as np\n",
     "from ruamel.yaml import YAML\n",
     "from skimage.morphology import label\n",
+    "import importlib.resources as pkg_resources\n",
     "\n",
     "from topostats.io import save_topostats_file\n",
-    "from topostats.grains import Grains\n",
+    "from topostats.grains import Grains, GrainCrop, GrainCropsDirection, ImageGrainCrops\n",
+    "from topostats.processing import run_grainstats\n",
+    "from topostats.io import read_yaml\n",
+    "import topostats\n",
     "\n",
     "base_dir = Path(\"/Users/sylvi/topo_data/perovskites-mountains\")\n",
     "assert base_dir.exists()\n",
@@ -23,7 +27,13 @@
     "\n",
     "testdir = data_dir / \"cutoff_freq_nm-225\" / \"1st samples- just retrace - 1-2um pyramids\" / \"C60 data\"\n",
     "\n",
-    "config_yaml_files = list(testdir.glob(\"*_config.yaml\"))"
+    "config_yaml_files = list(testdir.glob(\"*_config.yaml\"))\n",
+    "\n",
+    "yaml = YAML()\n",
+    "config_topostats = read_yaml(Path(\"./topostats\") / \"default_config.yaml\")\n",
+    "plotting_dictionary = Path(\"./topostats/plotting_dictionary.yaml\")\n",
+    "config_topostats[\"plotting\"][\"plot_dict\"] = read_yaml(plotting_dictionary)\n",
+    "config_plotting = config_topostats[\"plotting\"]"
    ]
   },
   {
@@ -34,6 +44,7 @@
    "source": [
     "for config_yaml_file in config_yaml_files:\n",
     "    filename = config_yaml_file.stem\n",
+    "    file_directory = testdir\n",
     "    # strip off the _config\n",
     "    filename = filename[:-7]\n",
     "    print(filename)\n",
@@ -95,6 +106,26 @@
     "    )\n",
     "\n",
     "    print(f\"Extracted {len(graincrops)} grains\")\n",
+    "\n",
+    "    graincropsdirection = GrainCropsDirection(\n",
+    "        crops=graincrops,\n",
+    "        full_mask_tensor=grain_mask_tensor,\n",
+    "    )\n",
+    "\n",
+    "    imagegraincrops = ImageGrainCrops(\n",
+    "        above=graincropsdirection,\n",
+    "        below=None,\n",
+    "    )\n",
+    "\n",
+    "    # run grainstats\n",
+    "    grainstats_df, height_profiles = run_grainstats(\n",
+    "        image_grain_crops=imagegraincrops,\n",
+    "        filename=filename,\n",
+    "        basename=file_directory,\n",
+    "        grainstats_config={\"run\": True},\n",
+    "        plotting_config=config_plotting,\n",
+    "        grain_out_path=file_directory,\n",
+    "    )\n",
     "\n",
     "    save_topostats_file(output_dir=testdir, filename=f\"{filename}.topostats\", topostats_object=topostats_dict)\n",
     "\n",
