print total numbers of samples

--- a/shelterin-data-explore-curated.ipynb
+++ b/shelterin-data-explore-curated.ipynb
@@ -43,13 +43,20 @@
     "all_stats[\"total_branch_lengths\"] /= 1e-9\n",
     "all_stats[\"smallest_bounding_area\"] /= 1e-18\n",
     "all_stats[\"area\"] /= 1e-18\n",
+    "all_stats[\"height_median\"] /= 1e-9\n",
     "\n",
     "# plotting options\n",
     "boxplotcolour = \"lightgrey\"\n",
     "\n",
     "print(all_stats.columns)\n",
     "print(\"----\")\n",
-    "print(all_disordered_segments.columns)"
+    "print(all_disordered_segments.columns)\n",
+    "\n",
+    "# print all display names and counts\n",
+    "print(\"Display names:\")\n",
+    "for display_name, count in all_stats[\"display_name\"].value_counts().items():\n",
+    "    print(f\"{display_name}: {count}\")\n",
+    "print(\"----\")"
    ]
   },
   {
@@ -314,7 +321,7 @@
     "                tbl = subdata_subgrain[\"total_branch_lengths\"].values[0]\n",
     "                if np.isnan(tbl):\n",
     "                    continue\n",
-    "                median_height = subdata_subgrain[\"height_median\"].values[0] / 1e-9\n",
+    "                median_height = subdata_subgrain[\"height_median\"].values[0]\n",
     "                if np.isnan(median_height):\n",
     "                    continue\n",
     "                tbl_height_pairs.append((tbl, median_height))\n",
@@ -338,11 +345,12 @@
     "# print image names\n",
     "print(data_tbl_anomaly[\"image\"].unique())\n",
     "\n",
+    "print(\"median heights vs total branch lengths for tel80 control\")\n",
     "plt.figure()\n",
     "plt.scatter(tbls, heights)\n",
-    "plt.title(\"Total branch lengths vs median height for TEL12control\")\n",
     "plt.xlabel(\"Total branch lengths (nm)\")\n",
     "plt.ylabel(\"Median height (nm)\")\n",
+    "plt.ylim(0, 3.0)\n",
     "plt.show()"
    ]
   },
@@ -359,11 +367,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_tel12c = all_stats[all_stats[\"basename\"].str.contains(\"TEL80control\")]\n",
-    "images = data_tel12c[\"image\"].unique()\n",
+    "data_tel80c = all_stats[all_stats[\"basename\"].str.contains(\"TEL80control\")]\n",
+    "images = data_tel80c[\"image\"].unique()\n",
     "tbl_height_pairs = []\n",
     "for image in images:\n",
-    "    subdata_images = data_tel12c[data_tel12c[\"image\"] == image]\n",
+    "    subdata_images = data_tel80c[data_tel80c[\"image\"] == image]\n",
     "    grain_numbers = subdata_images[\"grain_number\"].unique()\n",
     "    for grain_number in grain_numbers:\n",
     "        subdata_grain = subdata_images[subdata_images[\"grain_number\"] == grain_number]\n",
@@ -384,8 +392,8 @@
     "tbls = [pair[0] for pair in tbl_height_pairs]\n",
     "heights = [pair[1] for pair in tbl_height_pairs]\n",
     "\n",
-    "median_median_height = np.mean(heights) / 1e-9\n",
-    "iqr_median_height = np.std(heights) / 1e-9\n",
+    "median_median_height = np.mean(heights)\n",
+    "iqr_median_height = np.std(heights)\n",
     "median_total_branch_lengths = np.mean(tbls)\n",
     "iqr_total_branch_lengths = np.std(tbls)\n",
     "\n",
@@ -393,12 +401,15 @@
     "print(\n",
     "    f\"TEL80control | mean total branch lengths: {median_total_branch_lengths:.2f} nm | std: {iqr_total_branch_lengths:.2f} nm\"\n",
     ")\n",
+    "print(f\"N: {len(tbls)}\")\n",
+    "\n",
+    "print(\"mean heights vs total branch lengths for tel80 control\")\n",
     "\n",
     "plt.figure()\n",
     "plt.scatter(tbls, heights)\n",
-    "plt.title(\"Total branch lengths vs median height\")\n",
     "plt.xlabel(\"Total branch lengths\")\n",
     "plt.ylabel(\"Median height\")\n",
+    "plt.ylim(0, 3.0)\n",
     "plt.show()"
    ]
   },
